frontc/cparser.output
   0  $accept : %entry% $end

   1  interpret : file EOF

   2  file :
   3       | globals

   4  globals : global
   5          | globals global

   6  global : global_type global_defs SEMICOLON
   7         | global_type global_proto body
   8         | global_type old_proto old_pardefs body
   9         | global_type SEMICOLON
  10         | TYPEDEF typedef_type typedef_defs SEMICOLON
  11         | gcc_attribute TYPEDEF typedef_type typedef_defs SEMICOLON

  12  global_type : global_mod_list_opt global_qual
  13              | global_mod_list_opt comp_type global_mod_list_opt
  14              | global_mod_list_opt NAMED_TYPE global_mod_list_opt
  15              | global_mod_list_opt

  16  global_mod_list_opt :
  17                      | global_mod_list

  18  global_mod_list : global_mod
  19                  | global_mod_list global_mod

  20  global_mod : STATIC
  21             | CONST
  22             | VOLATILE
  23             | EXTERN
  24             | gcc_attribute

  25  global_qual : qual_type
  26              | global_qual qual_type
  27              | global_qual global_mod

  28  global_defs : global_def
  29              | global_defs COMMA global_def

  30  global_def : global_dec opt_gcc_attributes
  31             | global_dec opt_gcc_attributes EQ init_expression

  32  global_dec : IDENT
  33             | LPAREN global_dec RPAREN
  34             | STAR global_dec
  35             | STAR CONST global_dec
  36             | STAR VOLATILE global_dec
  37             | STAR RESTRICT global_dec
  38             | STAR gcc_attributes global_dec
  39             | global_dec LBRACKET comma_expression RBRACKET
  40             | global_dec LBRACKET RBRACKET
  41             | global_dec LPAREN parameters RPAREN
  42             | LPAREN global_dec RPAREN LPAREN parameters RPAREN
  43             | global_dec LPAREN old_parameters RPAREN
  44             | LPAREN global_dec RPAREN LPAREN old_parameters RPAREN

  45  global_proto : global_dec opt_gcc_attributes

  46  old_proto : global_dec opt_gcc_attributes

  47  old_parameters : old_pardecs
  48                 | old_pardecs ELLIPSIS

  49  old_pardecs : IDENT
  50              | old_pardecs COMMA IDENT
  51              | old_pardecs COMMA NAMED_TYPE

  52  old_pardefs : old_pardef
  53              | old_pardefs old_pardef

  54  old_pardef : old_type old_defs SEMICOLON

  55  old_type : old_mods_opt NAMED_TYPE old_mods_opt
  56           | old_mods_opt comp_type old_mods_opt
  57           | old_mods_opt old_qual

  58  old_mods_opt :
  59               | CONST
  60               | REGISTER

  61  old_qual : qual_type
  62           | old_qual qual_type
  63           | old_qual CONST
  64           | old_qual REGISTER

  65  old_defs : old_def
  66           | old_defs COMMA old_def

  67  old_def : old_dec

  68  old_dec : IDENT
  69          | STAR old_dec
  70          | STAR CONST old_dec
  71          | STAR VOLATILE old_dec
  72          | old_dec LBRACKET comma_expression RBRACKET
  73          | old_dec LBRACKET RBRACKET
  74          | old_dec LPAREN parameters RPAREN
  75          | LPAREN old_dec RPAREN LPAREN parameters RPAREN
  76          | LPAREN old_dec RPAREN

  77  local : local_type local_defs SEMICOLON

  78  local_type : local_mod_list_opt local_qual
  79             | local_mod_list_opt comp_type local_mod_list_opt
  80             | local_mod_list_opt NAMED_TYPE local_mod_list_opt

  81  local_mod_list_opt :
  82                     | local_mod_list

  83  local_mod_list : local_mod
  84                 | local_mod_list local_mod

  85  local_mod : STATIC
  86            | AUTO
  87            | CONST
  88            | VOLATILE
  89            | REGISTER
  90            | EXTERN
  91            | gcc_attribute

  92  local_qual : qual_type
  93             | local_qual qual_type
  94             | local_qual local_mod

  95  local_defs : local_def
  96             | local_defs COMMA local_def

  97  local_def : local_dec opt_gcc_attributes
  98            | local_dec opt_gcc_attributes EQ init_expression

  99  local_dec : IDENT
 100            | NAMED_TYPE
 101            | STAR local_dec
 102            | STAR RESTRICT local_dec
 103            | STAR CONST local_dec
 104            | STAR VOLATILE local_dec
 105            | STAR gcc_attributes local_dec
 106            | local_dec LBRACKET comma_expression RBRACKET
 107            | local_dec LBRACKET RBRACKET
 108            | local_dec LPAREN parameters RPAREN
 109            | LPAREN local_dec RPAREN LPAREN parameters RPAREN
 110            | LPAREN local_dec RPAREN

 111  typedef_type : typedef_sub
 112               | CONST typedef_sub
 113               | VOLATILE typedef_sub

 114  typedef_sub : NAMED_TYPE
 115              | comp_type
 116              | typedef_qual
 117              | IDENT
 118              | NAMED_TYPE CONST
 119              | NAMED_TYPE VOLATILE
 120              | comp_type CONST
 121              | comp_type VOLATILE
 122              | IDENT CONST
 123              | IDENT VOLATILE

 124  typedef_qual : qual_type
 125               | typedef_qual qual_type
 126               | typedef_qual CONST
 127               | typedef_qual VOLATILE

 128  typedef_defs : typedef_def
 129               | typedef_defs COMMA typedef_def

 130  typedef_def : typedef_dec opt_gcc_attributes

 131  typedef_dec : IDENT
 132              | STAR typedef_dec
 133              | STAR RESTRICT typedef_dec
 134              | STAR CONST typedef_dec
 135              | STAR VOLATILE typedef_dec
 136              | STAR gcc_attributes typedef_dec
 137              | typedef_dec LBRACKET comma_expression RBRACKET
 138              | typedef_dec LBRACKET RBRACKET
 139              | typedef_dec LPAREN parameters RPAREN
 140              | LPAREN typedef_dec RPAREN LPAREN parameters RPAREN
 141              | LPAREN typedef_dec RPAREN

 142  field_list : field_list field
 143             | field

 144  field : field_type field_defs SEMICOLON

 145  field_type : field_mod_list_opt field_qual
 146             | field_mod_list_opt comp_type field_mod_list_opt
 147             | field_mod_list_opt NAMED_TYPE field_mod_list_opt

 148  field_mod_list_opt :
 149                     | field_mod_list

 150  field_mod_list : field_mod
 151                 | field_mod_list field_mod

 152  field_mod : CONST
 153            | VOLATILE
 154            | gcc_attribute

 155  field_qual : qual_type
 156             | field_qual qual_type
 157             | field_qual field_mod

 158  field_defs : field_defs COMMA field_def
 159             | field_def

 160  field_def : field_dec

 161  field_dec :
 162            | IDENT
 163            | NAMED_TYPE
 164            | STAR field_dec
 165            | STAR RESTRICT field_dec
 166            | STAR CONST field_dec
 167            | STAR VOLATILE field_dec
 168            | STAR gcc_attributes field_dec
 169            | field_dec LBRACKET comma_expression RBRACKET
 170            | field_dec LBRACKET RBRACKET
 171            | field_dec LPAREN parameters RPAREN
 172            | LPAREN field_dec RPAREN LPAREN parameters RPAREN
 173            | LPAREN field_dec RPAREN
 174            | IDENT COLON expression

 175  parameters :
 176             | param_list
 177             | param_list COMMA ELLIPSIS

 178  param_list : param_list COMMA param
 179             | param

 180  param : param_type param_def

 181  param_type : param_mods_opt NAMED_TYPE param_mods_opt
 182             | param_mods_opt comp_type param_mods_opt
 183             | param_mods_opt param_qual

 184  param_mods_opt :
 185                 | param_mods

 186  param_mods : param_mod
 187             | param_mods param_mod

 188  param_mod : CONST
 189            | REGISTER
 190            | VOLATILE
 191            | gcc_attribute

 192  param_qual : qual_type
 193             | param_qual qual_type
 194             | param_qual CONST
 195             | param_qual REGISTER
 196             | param_qual VOLATILE
 197             | param_qual gcc_attribute

 198  param_def : param_dec

 199  param_dec :
 200            | IDENT
 201            | NAMED_TYPE
 202            | STAR param_dec
 203            | STAR RESTRICT param_dec
 204            | STAR CONST param_dec
 205            | STAR VOLATILE param_dec
 206            | STAR gcc_attributes param_dec
 207            | param_dec LBRACKET comma_expression RBRACKET
 208            | param_dec LBRACKET RBRACKET
 209            | LPAREN param_dec RPAREN LPAREN parameters RPAREN
 210            | LPAREN param_dec RPAREN

 211  only_type : only_type_type only_def

 212  only_type_type : only_mod_list_opt only_qual
 213                 | only_mod_list_opt comp_type only_mod_list_opt
 214                 | only_mod_list_opt NAMED_TYPE only_mod_list_opt

 215  only_mod_list_opt :
 216                    | only_mod_list

 217  only_qual : qual_type
 218            | only_qual qual_type
 219            | only_qual only_mod

 220  only_mod_list : only_mod
 221                | only_mod_list only_mod

 222  only_mod : CONST
 223           | VOLATILE
 224           | gcc_attribute

 225  only_def : only_dec

 226  only_dec :
 227           | STAR only_dec
 228           | STAR RESTRICT only_dec
 229           | STAR CONST only_dec
 230           | STAR VOLATILE only_dec
 231           | STAR gcc_attributes only_dec
 232           | only_dec LBRACKET comma_expression RBRACKET
 233           | only_dec LBRACKET RBRACKET
 234           | LPAREN only_dec RPAREN LPAREN parameters RPAREN
 235           | LPAREN only_dec RPAREN

 236  qual_type : VOID
 237            | CHAR
 238            | INT
 239            | FLOAT
 240            | DOUBLE
 241            | LONG
 242            | SHORT
 243            | SIGNED
 244            | UNSIGNED

 245  comp_type : STRUCT type_name
 246            | STRUCT LBRACE field_list RBRACE
 247            | STRUCT type_name LBRACE field_list RBRACE
 248            | UNION type_name
 249            | UNION LBRACE field_list RBRACE
 250            | UNION type_name LBRACE field_list RBRACE
 251            | ENUM type_name
 252            | ENUM LBRACE enum_list RBRACE
 253            | ENUM type_name LBRACE enum_list RBRACE

 254  type_name : IDENT
 255            | NAMED_TYPE

 256  enum_list : enum_name
 257            | enum_list COMMA enum_name

 258  enum_name : IDENT
 259            | IDENT EQ expression

 260  init_expression : LBRACE init_comma_expression RBRACE
 261                  | expression

 262  init_comma_expression : init_expression
 263                        | init_comma_expression COMMA init_expression
 264                        | init_comma_expression COMMA

 265  opt_expression :
 266                 | comma_expression

 267  comma_expression : expression
 268                   | comma_expression COMMA expression

 269  expression : constant
 270             | IDENT
 271             | SIZEOF expression
 272             | SIZEOF LPAREN only_type RPAREN
 273             | PLUS expression
 274             | MINUS expression
 275             | STAR expression
 276             | AND expression
 277             | EXCLAM expression
 278             | TILDE expression
 279             | PLUS_PLUS expression
 280             | expression PLUS_PLUS
 281             | MINUS_MINUS expression
 282             | expression MINUS_MINUS
 283             | expression ARROW IDENT
 284             | expression ARROW NAMED_TYPE
 285             | expression DOT IDENT
 286             | expression DOT NAMED_TYPE
 287             | LPAREN body RPAREN
 288             | LPAREN comma_expression RPAREN
 289             | LPAREN only_type RPAREN expression
 290             | expression LPAREN opt_expression RPAREN
 291             | expression LBRACKET comma_expression RBRACKET
 292             | expression QUEST expression COLON expression
 293             | expression PLUS expression
 294             | expression MINUS expression
 295             | expression STAR expression
 296             | expression SLASH expression
 297             | expression PERCENT expression
 298             | expression AND_AND expression
 299             | expression PIPE_PIPE expression
 300             | expression AND expression
 301             | expression PIPE expression
 302             | expression CIRC expression
 303             | expression EQ_EQ expression
 304             | expression EXCLAM_EQ expression
 305             | expression INF expression
 306             | expression SUP expression
 307             | expression INF_EQ expression
 308             | expression SUP_EQ expression
 309             | expression INF_INF expression
 310             | expression SUP_SUP expression
 311             | expression EQ expression
 312             | expression PLUS_EQ expression
 313             | expression MINUS_EQ expression
 314             | expression STAR_EQ expression
 315             | expression SLASH_EQ expression
 316             | expression PERCENT_EQ expression
 317             | expression AND_EQ expression
 318             | expression PIPE_EQ expression
 319             | expression CIRC_EQ expression
 320             | expression INF_INF_EQ expression
 321             | expression SUP_SUP_EQ expression

 322  constant : CST_INT
 323           | CST_FLOAT
 324           | CST_CHAR
 325           | string_list

 326  string_list : CST_STRING
 327              | string_list CST_STRING

 328  body_begin : LBRACE

 329  body_middle : opt_locals opt_stats

 330  body : body_begin body_middle RBRACE

 331  opt_locals :
 332             | locals

 333  locals : local
 334         | locals local

 335  opt_stats :
 336            | stats

 337  stats : statement
 338        | stats statement

 339  statement : SEMICOLON
 340            | comma_expression SEMICOLON
 341            | body
 342            | IF LPAREN comma_expression RPAREN statement
 343            | IF LPAREN comma_expression RPAREN statement ELSE statement
 344            | SWITCH LPAREN comma_expression RPAREN statement
 345            | WHILE LPAREN comma_expression RPAREN statement
 346            | DO statement WHILE LPAREN comma_expression RPAREN SEMICOLON
 347            | FOR LPAREN opt_expression SEMICOLON opt_expression SEMICOLON opt_expression RPAREN statement
 348            | IDENT COLON statement
 349            | CASE expression COLON statement
 350            | DEFAULT COLON statement
 351            | RETURN SEMICOLON
 352            | RETURN expression SEMICOLON
 353            | BREAK SEMICOLON
 354            | CONTINUE SEMICOLON
 355            | GOTO IDENT SEMICOLON
 356            | ASM LPAREN CST_STRING RPAREN SEMICOLON
 357            | ASM LPAREN CST_STRING gnu_asm_io gnu_asm_io opt_gnu_asm_mods RPAREN SEMICOLON

 358  gnu_asm_io : COLON gnu_asm_args

 359  gnu_asm_args : gnu_asm_arg
 360               | gnu_asm_args COMMA gnu_asm_arg

 361  gnu_asm_arg : CST_STRING LPAREN expression RPAREN
 362              | LBRACKET IDENT RBRACKET CST_STRING LPAREN expression RPAREN

 363  opt_gnu_asm_mods :
 364                   | COLON gnu_asm_mods

 365  gnu_asm_mods : CST_STRING
 366               | gnu_asm_mods COMMA CST_STRING

 367  opt_gcc_attributes :
 368                     | gcc_attributes

 369  gcc_attributes : gcc_attribute
 370                 | gcc_attributes gcc_attribute

 371  gcc_attribute : ATTRIBUTE LPAREN LPAREN opt_gnu_args RPAREN RPAREN
 372                | EXTENSION
 373                | INLINE

 374  opt_gnu_args :
 375               | gnu_args

 376  gnu_args : gnu_arg
 377           | gnu_args COMMA gnu_arg

 378  gnu_arg : gnu_id
 379          | constant
 380          | gnu_id LPAREN opt_gnu_args RPAREN

 381  gnu_id : IDENT
 382         | GNU_ATTRS

 383  %entry% : '\001' interpret
 384          | '\002' file

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . interpret  (383)
	file : .  (2)
	global_mod_list_opt : .  (16)

	TYPEDEF  shift 4
	VOLATILE  shift 5
	EXTERN  shift 6
	STATIC  shift 7
	CONST  shift 8
	ATTRIBUTE  shift 9
	EXTENSION  shift 10
	INLINE  shift 11
	IDENT  reduce 16
	NAMED_TYPE  reduce 16
	EOF  reduce 2
	CHAR  reduce 16
	INT  reduce 16
	DOUBLE  reduce 16
	FLOAT  reduce 16
	VOID  reduce 16
	ENUM  reduce 16
	STRUCT  reduce 16
	UNION  reduce 16
	SIGNED  reduce 16
	UNSIGNED  reduce 16
	LONG  reduce 16
	SHORT  reduce 16
	STAR  reduce 16
	LPAREN  reduce 16
	SEMICOLON  reduce 16

	interpret  goto 12
	file  goto 13
	globals  goto 14
	global  goto 15
	global_type  goto 16
	global_mod_list_opt  goto 17
	global_mod_list  goto 18
	global_mod  goto 19
	gcc_attribute  goto 20


state 2
	%entry% : '\002' . file  (384)
	file : .  (2)
	global_mod_list_opt : .  (16)

	TYPEDEF  shift 4
	VOLATILE  shift 5
	EXTERN  shift 6
	STATIC  shift 7
	CONST  shift 8
	ATTRIBUTE  shift 9
	EXTENSION  shift 10
	INLINE  shift 11
	$end  reduce 2
	IDENT  reduce 16
	NAMED_TYPE  reduce 16
	CHAR  reduce 16
	INT  reduce 16
	DOUBLE  reduce 16
	FLOAT  reduce 16
	VOID  reduce 16
	ENUM  reduce 16
	STRUCT  reduce 16
	UNION  reduce 16
	SIGNED  reduce 16
	UNSIGNED  reduce 16
	LONG  reduce 16
	SHORT  reduce 16
	STAR  reduce 16
	LPAREN  reduce 16
	SEMICOLON  reduce 16

	file  goto 21
	globals  goto 14
	global  goto 15
	global_type  goto 16
	global_mod_list_opt  goto 17
	global_mod_list  goto 18
	global_mod  goto 19
	gcc_attribute  goto 20


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	global : TYPEDEF . typedef_type typedef_defs SEMICOLON  (10)

	IDENT  shift 22
	NAMED_TYPE  shift 23
	CHAR  shift 24
	INT  shift 25
	DOUBLE  shift 26
	FLOAT  shift 27
	VOID  shift 28
	ENUM  shift 29
	STRUCT  shift 30
	UNION  shift 31
	SIGNED  shift 32
	UNSIGNED  shift 33
	LONG  shift 34
	SHORT  shift 35
	VOLATILE  shift 36
	CONST  shift 37
	.  error

	typedef_type  goto 38
	comp_type  goto 39
	qual_type  goto 40
	typedef_sub  goto 41
	typedef_qual  goto 42


state 5
	global_mod : VOLATILE .  (22)

	.  reduce 22


state 6
	global_mod : EXTERN .  (23)

	.  reduce 23


state 7
	global_mod : STATIC .  (20)

	.  reduce 20


state 8
	global_mod : CONST .  (21)

	.  reduce 21


state 9
	gcc_attribute : ATTRIBUTE . LPAREN LPAREN opt_gnu_args RPAREN RPAREN  (371)

	LPAREN  shift 43
	.  error


state 10
	gcc_attribute : EXTENSION .  (372)

	.  reduce 372


state 11
	gcc_attribute : INLINE .  (373)

	.  reduce 373


state 12
	%entry% : '\001' interpret .  (383)

	.  reduce 383


state 13
	interpret : file . EOF  (1)

	EOF  shift 44
	.  error


state 14
	file : globals .  (3)
	globals : globals . global  (5)
	global_mod_list_opt : .  (16)

	TYPEDEF  shift 4
	VOLATILE  shift 5
	EXTERN  shift 6
	STATIC  shift 7
	CONST  shift 8
	ATTRIBUTE  shift 9
	EXTENSION  shift 10
	INLINE  shift 11
	$end  reduce 3
	IDENT  reduce 16
	NAMED_TYPE  reduce 16
	EOF  reduce 3
	CHAR  reduce 16
	INT  reduce 16
	DOUBLE  reduce 16
	FLOAT  reduce 16
	VOID  reduce 16
	ENUM  reduce 16
	STRUCT  reduce 16
	UNION  reduce 16
	SIGNED  reduce 16
	UNSIGNED  reduce 16
	LONG  reduce 16
	SHORT  reduce 16
	STAR  reduce 16
	LPAREN  reduce 16
	SEMICOLON  reduce 16

	global  goto 45
	global_type  goto 16
	global_mod_list_opt  goto 17
	global_mod_list  goto 18
	global_mod  goto 19
	gcc_attribute  goto 20


state 15
	globals : global .  (4)

	.  reduce 4


state 16
	global : global_type . global_defs SEMICOLON  (6)
	global : global_type . global_proto body  (7)
	global : global_type . old_proto old_pardefs body  (8)
	global : global_type . SEMICOLON  (9)

	IDENT  shift 46
	STAR  shift 47
	LPAREN  shift 48
	SEMICOLON  shift 49
	.  error

	global_defs  goto 50
	global_def  goto 51
	global_dec  goto 52
	global_proto  goto 53
	old_proto  goto 54


state 17
	global_type : global_mod_list_opt . global_qual  (12)
	global_type : global_mod_list_opt . comp_type global_mod_list_opt  (13)
	global_type : global_mod_list_opt . NAMED_TYPE global_mod_list_opt  (14)
	global_type : global_mod_list_opt .  (15)

	NAMED_TYPE  shift 55
	CHAR  shift 24
	INT  shift 25
	DOUBLE  shift 26
	FLOAT  shift 27
	VOID  shift 28
	ENUM  shift 29
	STRUCT  shift 30
	UNION  shift 31
	SIGNED  shift 32
	UNSIGNED  shift 33
	LONG  shift 34
	SHORT  shift 35
	IDENT  reduce 15
	STAR  reduce 15
	LPAREN  reduce 15
	SEMICOLON  reduce 15

	global_qual  goto 56
	comp_type  goto 57
	qual_type  goto 58


state 18
	global_mod_list_opt : global_mod_list .  (17)
	global_mod_list : global_mod_list . global_mod  (19)

	VOLATILE  shift 5
	EXTERN  shift 6
	STATIC  shift 7
	CONST  shift 8
	ATTRIBUTE  shift 9
	EXTENSION  shift 10
	INLINE  shift 11
	IDENT  reduce 17
	NAMED_TYPE  reduce 17
	CHAR  reduce 17
	INT  reduce 17
	DOUBLE  reduce 17
	FLOAT  reduce 17
	VOID  reduce 17
	ENUM  reduce 17
	STRUCT  reduce 17
	UNION  reduce 17
	SIGNED  reduce 17
	UNSIGNED  reduce 17
	LONG  reduce 17
	SHORT  reduce 17
	STAR  reduce 17
	LPAREN  reduce 17
	SEMICOLON  reduce 17

	global_mod  goto 59
	gcc_attribute  goto 60


state 19
	global_mod_list : global_mod .  (18)

	.  reduce 18


state 20
	global : gcc_attribute . TYPEDEF typedef_type typedef_defs SEMICOLON  (11)
	global_mod : gcc_attribute .  (24)

	TYPEDEF  shift 61
	IDENT  reduce 24
	NAMED_TYPE  reduce 24
	CHAR  reduce 24
	INT  reduce 24
	DOUBLE  reduce 24
	FLOAT  reduce 24
	VOID  reduce 24
	ENUM  reduce 24
	STRUCT  reduce 24
	UNION  reduce 24
	SIGNED  reduce 24
	UNSIGNED  reduce 24
	LONG  reduce 24
	SHORT  reduce 24
	VOLATILE  reduce 24
	EXTERN  reduce 24
	STATIC  reduce 24
	CONST  reduce 24
	STAR  reduce 24
	LPAREN  reduce 24
	SEMICOLON  reduce 24
	ATTRIBUTE  reduce 24
	EXTENSION  reduce 24
	INLINE  reduce 24


state 21
	%entry% : '\002' file .  (384)

	.  reduce 384


state 22
	typedef_sub : IDENT .  (117)
	typedef_sub : IDENT . CONST  (122)
	typedef_sub : IDENT . VOLATILE  (123)

	VOLATILE  shift 62
	CONST  shift 63
	IDENT  reduce 117
	STAR  reduce 117
	LPAREN  reduce 117


state 23
	typedef_sub : NAMED_TYPE .  (114)
	typedef_sub : NAMED_TYPE . CONST  (118)
	typedef_sub : NAMED_TYPE . VOLATILE  (119)

	VOLATILE  shift 64
	CONST  shift 65
	IDENT  reduce 114
	STAR  reduce 114
	LPAREN  reduce 114


state 24
	qual_type : CHAR .  (237)

	.  reduce 237


state 25
	qual_type : INT .  (238)

	.  reduce 238


state 26
	qual_type : DOUBLE .  (240)

	.  reduce 240


state 27
	qual_type : FLOAT .  (239)

	.  reduce 239


state 28
	qual_type : VOID .  (236)

	.  reduce 236


state 29
	comp_type : ENUM . type_name  (251)
	comp_type : ENUM . LBRACE enum_list RBRACE  (252)
	comp_type : ENUM . type_name LBRACE enum_list RBRACE  (253)

	IDENT  shift 66
	NAMED_TYPE  shift 67
	LBRACE  shift 68
	.  error

	type_name  goto 69


state 30
	comp_type : STRUCT . type_name  (245)
	comp_type : STRUCT . LBRACE field_list RBRACE  (246)
	comp_type : STRUCT . type_name LBRACE field_list RBRACE  (247)

	IDENT  shift 66
	NAMED_TYPE  shift 67
	LBRACE  shift 70
	.  error

	type_name  goto 71


state 31
	comp_type : UNION . type_name  (248)
	comp_type : UNION . LBRACE field_list RBRACE  (249)
	comp_type : UNION . type_name LBRACE field_list RBRACE  (250)

	IDENT  shift 66
	NAMED_TYPE  shift 67
	LBRACE  shift 72
	.  error

	type_name  goto 73


state 32
	qual_type : SIGNED .  (243)

	.  reduce 243


state 33
	qual_type : UNSIGNED .  (244)

	.  reduce 244


state 34
	qual_type : LONG .  (241)

	.  reduce 241


state 35
	qual_type : SHORT .  (242)

	.  reduce 242


state 36
	typedef_type : VOLATILE . typedef_sub  (113)

	IDENT  shift 22
	NAMED_TYPE  shift 23
	CHAR  shift 24
	INT  shift 25
	DOUBLE  shift 26
	FLOAT  shift 27
	VOID  shift 28
	ENUM  shift 29
	STRUCT  shift 30
	UNION  shift 31
	SIGNED  shift 32
	UNSIGNED  shift 33
	LONG  shift 34
	SHORT  shift 35
	.  error

	comp_type  goto 39
	qual_type  goto 40
	typedef_sub  goto 74
	typedef_qual  goto 42


state 37
	typedef_type : CONST . typedef_sub  (112)

	IDENT  shift 22
	NAMED_TYPE  shift 23
	CHAR  shift 24
	INT  shift 25
	DOUBLE  shift 26
	FLOAT  shift 27
	VOID  shift 28
	ENUM  shift 29
	STRUCT  shift 30
	UNION  shift 31
	SIGNED  shift 32
	UNSIGNED  shift 33
	LONG  shift 34
	SHORT  shift 35
	.  error

	comp_type  goto 39
	qual_type  goto 40
	typedef_sub  goto 75
	typedef_qual  goto 42


state 38
	global : TYPEDEF typedef_type . typedef_defs SEMICOLON  (10)

	IDENT  shift 76
	STAR  shift 77
	LPAREN  shift 78
	.  error

	typedef_defs  goto 79
	typedef_def  goto 80
	typedef_dec  goto 81


state 39
	typedef_sub : comp_type .  (115)
	typedef_sub : comp_type . CONST  (120)
	typedef_sub : comp_type . VOLATILE  (121)

	VOLATILE  shift 82
	CONST  shift 83
	IDENT  reduce 115
	STAR  reduce 115
	LPAREN  reduce 115


state 40
	typedef_qual : qual_type .  (124)

	.  reduce 124


state 41
	typedef_type : typedef_sub .  (111)

	.  reduce 111


state 42
	typedef_sub : typedef_qual .  (116)
	typedef_qual : typedef_qual . qual_type  (125)
	typedef_qual : typedef_qual . CONST  (126)
	typedef_qual : typedef_qual . VOLATILE  (127)

	CHAR  shift 24
	INT  shift 25
	DOUBLE  shift 26
	FLOAT  shift 27
	VOID  shift 28
	SIGNED  shift 32
	UNSIGNED  shift 33
	LONG  shift 34
	SHORT  shift 35
	VOLATILE  shift 84
	CONST  shift 85
	IDENT  reduce 116
	STAR  reduce 116
	LPAREN  reduce 116

	qual_type  goto 86


state 43
	gcc_attribute : ATTRIBUTE LPAREN . LPAREN opt_gnu_args RPAREN RPAREN  (371)

	LPAREN  shift 87
	.  error


state 44
	interpret : file EOF .  (1)

	.  reduce 1


state 45
	globals : globals global .  (5)

	.  reduce 5


state 46
	global_dec : IDENT .  (32)

	.  reduce 32


state 47
	global_dec : STAR . global_dec  (34)
	global_dec : STAR . CONST global_dec  (35)
	global_dec : STAR . VOLATILE global_dec  (36)
	global_dec : STAR . RESTRICT global_dec  (37)
	global_dec : STAR . gcc_attributes global_dec  (38)

	IDENT  shift 46
	VOLATILE  shift 88
	CONST  shift 89
	RESTRICT  shift 90
	STAR  shift 47
	LPAREN  shift 48
	ATTRIBUTE  shift 9
	EXTENSION  shift 10
	INLINE  shift 11
	.  error

	global_dec  goto 91
	gcc_attributes  goto 92
	gcc_attribute  goto 93


state 48
	global_dec : LPAREN . global_dec RPAREN  (33)
	global_dec : LPAREN . global_dec RPAREN LPAREN parameters RPAREN  (42)
	global_dec : LPAREN . global_dec RPAREN LPAREN old_parameters RPAREN  (44)

	IDENT  shift 46
	STAR  shift 47
	LPAREN  shift 48
	.  error

	global_dec  goto 94


state 49
	global : global_type SEMICOLON .  (9)

	.  reduce 9


state 50
	global : global_type global_defs . SEMICOLON  (6)
	global_defs : global_defs . COMMA global_def  (29)

	SEMICOLON  shift 95
	COMMA  shift 96
	.  error


state 51
	global_defs : global_def .  (28)

	.  reduce 28


state 52
	global_def : global_dec . opt_gcc_attributes  (30)
	global_def : global_dec . opt_gcc_attributes EQ init_expression  (31)
	global_dec : global_dec . LBRACKET comma_expression RBRACKET  (39)
	global_dec : global_dec . LBRACKET RBRACKET  (40)
	global_dec : global_dec . LPAREN parameters RPAREN  (41)
	global_dec : global_dec . LPAREN old_parameters RPAREN  (43)
	global_proto : global_dec . opt_gcc_attributes  (45)
	old_proto : global_dec . opt_gcc_attributes  (46)
	opt_gcc_attributes : .  (367)

	LPAREN  shift 97
	LBRACKET  shift 98
	ATTRIBUTE  shift 9
	EXTENSION  shift 10
	INLINE  shift 11
	NAMED_TYPE  reduce 367
	CHAR  reduce 367
	INT  reduce 367
	DOUBLE  reduce 367
	FLOAT  reduce 367
	VOID  reduce 367
	ENUM  reduce 367
	STRUCT  reduce 367
	UNION  reduce 367
	SIGNED  reduce 367
	UNSIGNED  reduce 367
	LONG  reduce 367
	SHORT  reduce 367
	CONST  reduce 367
	REGISTER  reduce 367
	EQ  reduce 367
	LBRACE  reduce 367
	SEMICOLON  reduce 367
	COMMA  reduce 367

	gcc_attributes  goto 99
	gcc_attribute  goto 93
	opt_gcc_attributes  goto 100


state 53
	global : global_type global_proto . body  (7)

	LBRACE  shift 101
	.  error

	body  goto 102
	body_begin  goto 103


state 54
	global : global_type old_proto . old_pardefs body  (8)
	old_mods_opt : .  (58)

	CONST  shift 104
	REGISTER  shift 105
	NAMED_TYPE  reduce 58
	CHAR  reduce 58
	INT  reduce 58
	DOUBLE  reduce 58
	FLOAT  reduce 58
	VOID  reduce 58
	ENUM  reduce 58
	STRUCT  reduce 58
	UNION  reduce 58
	SIGNED  reduce 58
	UNSIGNED  reduce 58
	LONG  reduce 58
	SHORT  reduce 58

	old_pardefs  goto 106
	old_pardef  goto 107
	old_type  goto 108
	old_mods_opt  goto 109

